<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strt_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/adButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/alertb_text"
        app:layout_constraintBottom_toTopOf="@+id/verticalCenter"
        app:layout_constraintEnd_toStartOf="@+id/horizontalCenter" />

    <Button
        android:id="@+id/adfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/alertfb_text"
        app:layout_constraintBottom_toTopOf="@+id/verticalCenter"
        app:layout_constraintStart_toStartOf="@+id/horizontalCenter" />

    <Button
        android:id="@+id/bsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bsb_text"
        app:layout_constraintEnd_toStartOf="@+id/horizontalCenter"
        app:layout_constraintTop_toTopOf="@+id/verticalCenter" />

    <Button
        android:id="@+id/bsfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/bsfb_text"
        app:layout_constraintStart_toStartOf="@+id/horizontalCenter"
        app:layout_constraintTop_toTopOf="@+id/verticalCenter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>